--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "webpack-dev-server": "^4.4.0"
     },
     "dependencies": {
+        "lodash": "^4.17.21",
         "nouislider": "^15.5.0"
     }
 }
